Revert to not using custom images for build steps.
Images did not contain required functionality.

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -47,11 +47,11 @@ pipelines:
             - docker logout ${ACR_URL}
       - step:
           name: Package helm chart & push to artifactory
-          image:
-            name: connyun.azurecr.io/com.connyun/helm:2.7.2
-            username: $ACR_USERNAME
-            password: $ACR_PASSWORD
           script:
+            # setup helm client
+            - curl https://raw.githubusercontent.com/kubernetes/helm/master/scripts/get > get_helm.sh
+            - chmod +x get_helm.sh
+            - ./get_helm.sh --version v2.7.2 # version of tiller
             # setup helm client
             - helm init --client-only
             # setup artifactory cli
@@ -67,12 +67,12 @@ pipelines:
             - jfrog rt upload grotesque-${SEMVER}.tgz helm/grotesque/grotesque-${SEMVER}.tgz --build-name=${BITBUCKET_REPO_SLUG} --build-number=${BITBUCKET_BUILD_NUMBER}
       - step:
           name: Continuous deployment to dev cluster
-          image:
-            name: connyun.azurecr.io/com.connyun/kubectl:1.8.10
-            username: $ACR_USERNAME
-            password: $ACR_PASSWORD
           deployment: test
           script:
+            # setup kubernetes client
+            - curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl # get the latest version
+            - chmod +x ./kubectl
+            - mv ./kubectl /usr/local/bin/kubectl
             - echo "${K8S_DEV_CA}" | base64 -d > .k8s-dev-ca.crt
             - kubectl config set-cluster dev-cluster --embed-certs=true --server=${K8S_DEV_API_SERVER} --certificate-authority=.k8s-dev-ca.crt
             - kubectl config set-credentials ${K8S_DEV_SA} --token=${K8S_DEV_TOKEN}
