Move secret out of Helm chart.
Secret is dependent on values from Azure portal so can't really be part of the Helm chart. Needs to be created manually beforehand.

--- a/helm/grotesque/templates/deployment.yaml
+++ b/helm/grotesque/templates/deployment.yaml
@@ -48,10 +48,10 @@ spec:
           - name: TSI_SP_CID
             valueFrom:
               secretKeyRef:
-                name: {{ .Release.Name }}-secret
+                name: grotesque-secret
                 key: tsi_serviceprincipial_clientid
           - name: TSI_SP_SECRET
             valueFrom:
               secretKeyRef:
-                name: {{ .Release.Name }}-secret
+                name: grotesque-secret
                 key: tsi_serviceprincipal_secret
