--- a/runtime-config/values-dev.yaml
+++ b/runtime-config/values-dev.yaml
@@ -28,3 +28,6 @@ ingress:
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
   path: /grotesque
+app:
+  # Defined in Azure portal app registration
+  tsi_serviceprincipal_clientid: c5a4e5c6-0faf-47ff-b0d9-e3be81df496e
