--- a/secret.yaml
+++ b/secret.yaml
@@ -6,5 +6,4 @@ metadata:
 type: Opaque
 data:
   # kubectl get secret X -o yaml + base64 -d to read secret
-  tsi_serviceprincipal_clientid: #LOOK_ME_UP_IN_PORTAL#
-  tsi_serviceprincipal_secret: #LOOK_ME_UP_IN_PORTAL#
+  tsi_serviceprincipal_secret: #GET ME FROM AZURE PORTAL#
