--- a/Grotesque/Dockerfile
+++ b/Grotesque/Dockerfile
@@ -1,4 +1,4 @@
-FROM microsoft/aspnetcore:2.0 AS base
+FROM microsoft/aspnetcore:2.0-jessie AS base
 WORKDIR /app
 EXPOSE 80
 ENTRYPOINT ["dotnet", "Grotesque.dll"]
