--- a/runtime-config/values-dev.yaml
+++ b/runtime-config/values-dev.yaml
@@ -31,3 +31,4 @@ ingress:
 app:
   # Defined in Azure portal app registration
   tsi_serviceprincipal_clientid: c5a4e5c6-0faf-47ff-b0d9-e3be81df496e
+  tsi_environment_fqdn: 078f5a28-fbff-4a2f-bc60-2fdab61a10c1.env.timeseries.azure.com
