Update Prometheus scrape path

--- a/helm/grotesque/templates/deployment.yaml
+++ b/helm/grotesque/templates/deployment.yaml
@@ -18,6 +18,7 @@ spec:
         bin: {{ template "bin" }}
       annotations:
         promtheus.io/scrape: {{ .Values.prometheus.scrape | quote }}
+        prometheus.io/path: /grotesque/metrics
     spec:
       containers:
         - name: {{ .Chart.Name }}
